<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cur.parcial3.Registro">

    <EditText
        android:id="@+id/txtIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:editable="true"
        android:hint="@string/codigoisbn"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtIsbn"
        android:hint="@string/libroname" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtLibro"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/txtAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtDescripcion"
        android:ems="10"
        android:hint="@string/autor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAutor"
        android:hint="@string/genero" />

    <EditText
        android:id="@+id/txtEditorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtGenero"
        android:hint="@string/editorial" />

    <EditText
        android:id="@+id/txtPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEditorial"
        android:ems="10"
        android:hint="@string/paginas"
        android:inputType="number" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblCalificacion" />

    <TextView
        android:id="@+id/lblCalificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtPaginas"
        android:text="@string/lblclasi"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnCreate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/ratingBar"
        android:text="@string/btnCreate"
        android:layout_above="@+id/btnUpdate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnUpdate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_below="@+id/ratingBar"
        android:layout_toEndOf="@+id/btnCreate"
        android:layout_toLeftOf="@+id/btnDelete"
        android:layout_toStartOf="@+id/btnDelete"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnUpdate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnDelte" />

    <Button
        android:id="@+id/btnLista"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btnConsulta"
        android:text="@string/btnConsultar"
        android:layout_alignBottom="@+id/btnLimpiar"
        android:layout_toRightOf="@+id/btnConsulta"
        android:layout_alignRight="@+id/btnDelete"
        android:layout_alignEnd="@+id/btnDelete" />

    <Button
        android:id="@+id/btnConsulta"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnCreate"
        android:layout_toStartOf="@+id/btnUpdate"
        android:text="@string/btnConsulta" />

    <Button
        android:id="@+id/btnLimpiar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClean"
        android:layout_below="@+id/btnConsulta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btnUpdate"
        android:layout_toStartOf="@+id/btnUpdate" />
</RelativeLayout>
